--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,7 +5,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="@routes.Assets.at("stylesheets/aya.css")">
-  <title>@title - AyaIB</title>
+  <title>@title | AyaIB</title>
 </head>
 <body>
   <div id="main-container">
