--- a/app/assets/stylesheets/aya/views/index.less
+++ b/app/assets/stylesheets/aya/views/index.less
@@ -8,7 +8,7 @@
   background-color: @text-bg;
   padding: 10px;
   list-style-type: none;
-  border-radius: 5px;
+  border-radius: @default-border-radius;
 
   > li {
     font-size: 18px;
