Added file serving

--- a/app/assets/stylesheets/aya/global/mixins.less
+++ b/app/assets/stylesheets/aya/global/mixins.less
@@ -4,3 +4,7 @@
   background: -moz-linear-gradient(top, @startColor 0%, @endColor @stop);
   background: linear-gradient(top, @startColor 0%, @endColor @stop);
 }
+
+.outer-glow () {
+  box-shadow: 0 0 @default-padding @shadow;
+}
