--- a/app/assets/stylesheets/aya/global/variables.less
+++ b/app/assets/stylesheets/aya/global/variables.less
@@ -4,6 +4,8 @@
 @text-bg: #FFFFFF;
 @link: #FFAF00;
 @link-hover: lighten(@link, 10%);
+@main-header: @link;
+@shadow: darken(@bg-darker, 5%);
 
 @default-border-radius: 5px;
 @default-padding: 10px;
