--- a/app/assets/stylesheets/aya/master.less
+++ b/app/assets/stylesheets/aya/master.less
@@ -4,6 +4,7 @@
 
 @import "views/main";
 @import "views/index";
+@import "views/board";
 
 #post-form-container {
   position: fixed;
@@ -13,6 +14,7 @@
   padding: @default-padding 23px @default-padding @default-padding;
   background-color: @text-bg;
   border-top-left-radius: @default-border-radius;
+  .outer-glow;
 
   > form {
     text-align: right;
