Added: posting thread replies; merged posting replies and new threads into one service method

--- a/app/assets/stylesheets/aya/master.less
+++ b/app/assets/stylesheets/aya/master.less
@@ -5,6 +5,7 @@
 @import "views/main";
 @import "views/index";
 @import "views/board";
+@import "views/thread";
 
 #post-form-container {
   position: fixed;
