Thread view improvements

--- a/app/assets/stylesheets/aya/global/variables.less
+++ b/app/assets/stylesheets/aya/global/variables.less
@@ -1,8 +1,8 @@
-@bg-lighter: #E0EFF1;
-@bg-darker: #AED0D1;
-@text: #000000;
+@bg-lighter: lighten(#E0EFF1, 5%);
+@bg-darker: lighten(#AED0D1, 5%);
+@text: #000030;
 @text-bg: #FFFFFF;
-@link: #FFAF00;
+@link: #FF9F00;
 @link-hover: lighten(@link, 10%);
 @main-header: @link;
 @shadow: darken(@bg-darker, 5%);
