--- a/app/assets/stylesheets/aya/views/main.less
+++ b/app/assets/stylesheets/aya/views/main.less
@@ -1,11 +1,13 @@
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
   color: @text;
   .gradient(@bg-darker, @bg-lighter, 200px);
   margin-top: @default-padding;
+  font-size: 13px;
+  line-height: 1.3em;
 }
 
 a {
