Thread view improvements

--- a/app/assets/stylesheets/aya/master.less
+++ b/app/assets/stylesheets/aya/master.less
@@ -12,7 +12,7 @@
   right: 0;
   bottom: 0;
   width: 350px;
-  padding: @default-padding 23px @default-padding @default-padding;
+  padding: @default-padding;
   background-color: @text-bg;
   border-top-left-radius: @default-border-radius;
   .outer-glow;
