--- a/app/assets/stylesheets/aya/views/index.less
+++ b/app/assets/stylesheets/aya/views/index.less
@@ -6,12 +6,12 @@
 
 #board-list {
   background-color: @text-bg;
-  padding: 10px;
+  padding: @default-padding*2 @default-padding;
   list-style-type: none;
   border-radius: @default-border-radius;
 
   > li {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
   }
 }
