--- a/public/stylesheets/aya.css
+++ b/public/stylesheets/aya.css
@@ -119,7 +119,7 @@ body {
   background: linear-gradient(top, #bed9da 0%, #f2f8f9 200px);
   margin-top: 10px;
   font-size: 13px;
-  line-height: 1.3em;
+  line-height: 1.4em;
 }
 a {
   color: #ff9f00;
@@ -135,12 +135,12 @@ a:hover {
 }
 #board-list {
   background-color: #ffffff;
-  padding: 10px;
+  padding: 20px 10px;
   list-style-type: none;
   border-radius: 5px;
 }
 #board-list > li {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
 }
 #board > header {
@@ -161,6 +161,7 @@ h2 > a {
 #threads {
   margin: 10px;
   margin-top: 20px;
+  width: 100%;
 }
 .thread {
   margin-bottom: 20px;
@@ -175,34 +176,45 @@ h2 > a {
 .file {
   display: inline;
 }
-.file > .info {
-  font-size: 11px;
-}
 .file img {
   float: left;
   margin-right: 15px;
 }
+.file-info {
+  font-size: 11px;
+}
+.file-info > a {
+  color: #000030;
+  text-decoration: underline;
+}
+.file-info > a:hover {
+  color: #ff9f00;
+}
 .reply {
   display: table;
-}
-.reply > .info {
-  height: 1.7em;
+  max-width: 60em;
 }
 .reply > .info > .poster-name {
   font-weight: bold;
 }
-.reply.op > .info {
-  display: block;
+.reply > .content {
+  display: inline;
 }
-.reply.op > .content {
-  display: block;
+.reply > .content:before {
+  content: " ";
+  display: inline-block;
+  height: 20px;
 }
 .reply:not(.op) {
   background-color: #ffffff;
   margin: 10px;
-  padding: 5px 10px;
+  margin-right: 0;
+  padding: 5px 10px 8.33333333px 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px #aed0d1;
+}
+.reply:not(.op):last-child {
+  margin-bottom: 0;
 }
 .reply-link {
   font-weight: bold;
@@ -212,7 +224,7 @@ h2 > a {
   right: 0;
   bottom: 0;
   width: 350px;
-  padding: 10px 23px 10px 10px;
+  padding: 10px;
   background-color: #ffffff;
   border-top-left-radius: 5px;
   box-shadow: 0 0 10px #aed0d1;
