Thread view improvements

--- a/app/assets/stylesheets/aya/global/variables.less
+++ b/app/assets/stylesheets/aya/global/variables.less
@@ -5,7 +5,8 @@
 @link: #FF9F00;
 @link-hover: lighten(@link, 10%);
 @main-header: @link;
-@shadow: darken(@bg-darker, 5%);
+@shadow: @bg-darker;
+@anonymous-green: #117743;
 
 @default-border-radius: 5px;
 @default-padding: 10px;
