--- a/app/assets/stylesheets/aya/master.less
+++ b/app/assets/stylesheets/aya/master.less
@@ -24,15 +24,18 @@
       display: none;
     }
 
-    input {
+    input, textarea {
       width: 100%;
+      box-sizing: border-box;
+      padding: 5px;
+    }
+
+    input {
+      margin-bottom: 2px;
     }
 
     textarea {
-      width: 100%;
-      box-sizing: border-box;
       height: 120px;
-      padding: 5px;
     }
 
     button {
